feat(wiz-kubernetes-controller): allow to define annotations on secrets
Defining annotations on secrets could be useful for integration with external secrets management tools (Vault...)

--- a/wiz-kubernetes-connector/templates/secret-proxy.yaml
+++ b/wiz-kubernetes-connector/templates/secret-proxy.yaml
@@ -6,6 +6,10 @@ type: Opaque
 metadata:
   name: {{ include "wiz-kubernetes-connector.proxySecretName" . | trim }}
   namespace: {{ .Release.Namespace | quote }}
+  {{- with .Values.httpProxyConfiguration.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     {{- include "wiz-kubernetes-connector.labels" . | nindent 4 }}
 data:
