--- a/wiz-kubernetes-connector/templates/service-account-cluster-reader.yaml
+++ b/wiz-kubernetes-connector/templates/service-account-cluster-reader.yaml
@@ -23,6 +23,9 @@ metadata:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation
     kubernetes.io/service-account.name: {{ .Values.clusterReader.serviceAccount.name }}
+    {{- with .Values.clusterReader.secret.annotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 type: kubernetes.io/service-account-token
 ---
 apiVersion: rbac.authorization.k8s.io/v1
