--- a/wiz-kubernetes-connector/templates/secrets.yaml
+++ b/wiz-kubernetes-connector/templates/secrets.yaml
@@ -10,6 +10,9 @@ metadata:
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "-1"
+    {{- with .Values.wizConnector.annotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 type: Opaque
 stringData:
   {{- include "wiz-kubernetes-connector.wizConnectorSecretData" . | nindent 2 }}
@@ -29,6 +32,9 @@ metadata:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded,hook-failed
     "helm.sh/hook-weight": "-1"
+    {{- with .Values.wizApiToken.annotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 data:
   clientId: {{ required "Missing required value wizApiToken.clientId is required" .Values.wizApiToken.clientId | b64enc | quote }}
   clientToken: {{ required "Missing required value: wizApiToken.clientToken is required" .Values.wizApiToken.clientToken | b64enc | quote }}
