--- a/wiz-broker/templates/wiz-rbac.yaml
+++ b/wiz-broker/templates/wiz-rbac.yaml
@@ -22,6 +22,9 @@ metadata:
     {{- include "wiz-broker.labels" . | nindent 4 }}
   annotations:
     kubernetes.io/service-account.name: {{ $rbacServiceAccountName }}
+    {{- with .Values.rbacSecret.annotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 type: kubernetes.io/service-account-token
 ---
 apiVersion: rbac.authorization.k8s.io/v1
