feat(wiz-admission-controller): allow to define annotations on secrets
Defining annotations on secrets could be useful for integration with external secrets management tools (Vault...)

--- a/wiz-admission-controller/templates/opawebhook.yaml
+++ b/wiz-admission-controller/templates/opawebhook.yaml
@@ -46,6 +46,9 @@ metadata:
     # Using helm hook to create certs only for chart install
     "helm.sh/hook": "pre-install, pre-upgrade"
     "helm.sh/hook-delete-policy": "before-hook-creation"
+    {{- with .Values.opaWebhook.secret.annotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 data:
   tls.crt: {{ $tlsCrt }}
   tls.key: {{ $tlsKey }}
