--- a/wiz-admission-controller/templates/secret.yaml
+++ b/wiz-admission-controller/templates/secret.yaml
@@ -5,6 +5,10 @@ metadata:
   name: {{ include "wiz-admission-controller.secretApiTokenName" . | trim }}
   labels:
     {{- include "wiz-admission-controller.labels" . | nindent 4 }}
+  {{- with .Values.secret.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 data:
   clientId: {{ required "Missing required value wizApiToken.clientId is required" .Values.wizApiToken.clientId | b64enc | quote }}
   clientToken: {{ required "Missing required value: wizApiToken.clientToken is required" .Values.wizApiToken.clientToken | b64enc | quote }}
