feat(wiz-kubernetes-connector): allow to add annotation on the auto create and delete jobs

--- a/wiz-kubernetes-connector/templates/job-delete-connector.yaml
+++ b/wiz-kubernetes-connector/templates/job-delete-connector.yaml
@@ -10,7 +10,9 @@ metadata:
   annotations:
     "helm.sh/hook": pre-delete
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
-
+    {{- with .Values.autoCreateConnector.autoDeleteJobAnnotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   manualSelector: true
   selector:
