--- a/wiz-kubernetes-connector/templates/job-create-connector.yaml
+++ b/wiz-kubernetes-connector/templates/job-create-connector.yaml
@@ -9,7 +9,9 @@ metadata:
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
-
+    {{- with .Values.autoCreateConnector.autoCreateJobAnnotations }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   manualSelector: true
   selector:
