fix(wiz-kubernetes-connector): fix annotation parameter for wiz api token
With the refactoring made in #126 the annotations for the wiz api
token are not working anymore

--- a/wiz-kubernetes-connector/templates/secrets-wiz-api-token.yaml
+++ b/wiz-kubernetes-connector/templates/secrets-wiz-api-token.yaml
@@ -10,7 +10,7 @@ metadata:
     "helm.sh/hook": pre-install, pre-upgrade
     "helm.sh/hook-weight": "-1"
     {{- with.Values.wizApiToken.secret.annotations }}
-    {{- . | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
     {{- end }}
 stringData:
   clientId: {{ required "Missing required value wizApiToken.clientId is required" .Values.wizApiToken.clientId | quote }}
