--- a/wiz-kubernetes-connector/templates/job-create-connector.yaml
+++ b/wiz-kubernetes-connector/templates/job-create-connector.yaml
@@ -6,9 +6,9 @@ metadata:
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "wiz-kubernetes-connector.labels" . | nindent 4 }}
-  annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+  #annotations:
+  #  "helm.sh/hook": pre-install,pre-upgrade
+  #  "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 
 spec:
   manualSelector: true
